Feat: api for create/delete bridge with vxlan if API endpoint for manage bridge with VXLAN interface: - POST new VXLAN bridge (and vxlan interface) - DELETE exist VXLAN bridge (and vxlan interface)
