# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "192.168.0.189:8080",
+    "host": "192.168.101.128:8080",
     "basePath": "/",
     "paths": {
         "/api/v1/bridge": {
@@ -106,6 +106,83 @@
                     }
                 }
             }
+        },
+        "/api/v1/vxlan/{bridge_name}": {
+            "post": {
+                "description": "Add a new bridge with the given name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vxlan"
+                ],
+                "summary": "Add a new bridge",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bridge name",
+                        "name": "bridge_name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Vxlan Interface request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.VxlanInterfaceRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Bridge created successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid bridge name",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a exist bridge with the given name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vxlan"
+                ],
+                "summary": "Delete bridge",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bridge name",
+                        "name": "bridge_name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Bridge delete successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -127,6 +204,27 @@
                     "type": "string"
                 },
                 "bridge2": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.VxlanInterfaceRequest": {
+            "type": "object",
+            "properties": {
+                "bindInterface": {
+                    "type": "string"
+                },
+                "localBrIp": {
+                    "type": "string"
+                },
+                "remoteIp": {
+                    "description": "LocalBridgeName\t\tstring\t`json:\"localBrName\"`",
+                    "type": "string"
+                },
+                "vxlanId": {
+                    "type": "string"
+                },
+                "vxlanInterface": {
                     "type": "string"
                 }
             }
